<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <EditText
        android:id="@+id/airlineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="5"
        android:hint="@string/airline_name"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="500dp"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/airlineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_airline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/airlineName"
        android:layout_marginBottom="450dp"/>

    <EditText
        android:id="@+id/flightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="4"
        android:maxEms="4"
        android:hint="@string/flight_number"
        android:inputType="number"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/airlineButton"
        android:layout_marginBottom="330dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="3"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:maxLength="3"
        android:hint="@string/source"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/flightNumber"
        android:layout_marginBottom="330dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="3"
        android:hint="@string/departure_date"
        android:inputType="textCapCharacters"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/source"
        android:layout_marginBottom="290dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="3"
        android:hint="@string/destination"
        android:gravity="center_horizontal"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/depart"
        android:layout_marginBottom="250dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/arrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="3"
        android:hint="@string/arrival_date"
        android:gravity="center_horizontal"
        android:inputType="textCapCharacters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dest"
        android:layout_marginBottom="200dp"
        android:autofillHints="" />


    <Button
        android:id="@+id/flightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_flight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/arrive"
        android:layout_marginBottom="100dp" />

    <LinearLayout
        android:id="@+id/printLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/flightButton"
        android:visibility="invisible">

    <Button
        android:id="@+id/printButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_airline"/>

    <Button
        android:id="@+id/prettyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pretty_airline" />

    <Button
        android:id="@+id/xmlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xml_airline" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>