<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/airlineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="5"
        android:hint="@string/airline_name"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/airlineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_airline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/airlineName"
        android:layout_marginBottom="200dp"/>

    <LinearLayout
        android:id="@+id/printLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/airlineButton"
        android:visibility="invisible">
        <Button
            android:id="@+id/printButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/print_airline"/>

        <Button
            android:id="@+id/prettyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pretty_airline" />

        <Button
            android:id="@+id/xmlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xml_airline" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="395dp"
        android:layout_marginBottom="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/airlineapp4"
        android:contentDescription="@string/search" />


</androidx.constraintlayout.widget.ConstraintLayout>